--- a/pages/ex2_index.html
+++ b/pages/ex2_index.html
@@ -26,31 +26,31 @@
             </div>
             <!-- <div class="row gx-0" style="background-color: white;"> -->
               <div class="col-3 mt-4 mb-2 px-2">
-                <img src="/img/boots_icon.jpg" class="float-end" width="40px">
+                <img src="../img/boots_icon.jpg" class="float-end" width="40px">
               </div>
               <div class="col-8 mt-4">
                   <input type="text" id="firstname" class="form-control" placeholder="First Name">
               </div>
               <div class="col-3 mt-4 mb-2 px-2">
-                <img src="/img/boots_icon.jpg" class="float-end" width="40px">
+                <img src="../img/boots_icon.jpg" class="float-end" width="40px">
               </div>
               <div class="col-8 mt-4 mb-2">
                   <input type="text" id="lastname" class="form-control" placeholder="Last Name">
               </div>
               <div class="col-3 mt-4 mb-2 px-2">
-                <img src="/img/mail_icon.png" class="float-end" width="40px">
+                <img src="../img/mail_icon.png" class="float-end" width="40px">
               </div>
               <div class="col-8 mt-4 mb-2 px-2">
                   <input type="text" id="email" class="form-control" placeholder="Email Address">
               </div>
               <div class="col-3 mt-4 mb-2 px-2">
-                <img src="/img/phone_icon.png" class="float-end" width="40px">
+                <img src="../img/phone_icon.png" class="float-end" width="40px">
               </div>
               <div class="col-8 mt-4 mb-2 px-2">
                   <input type="text" id="phone" class="form-control" placeholder="Phone">
               </div>
               <div class="col-3 mt-4 mb-2 px-2">
-                <img src="/img/write_icon.jpg" class="float-end" width="40px">
+                <img src="../img/write_icon.jpg" class="float-end" width="40px">
               </div>
               <div class="col-8 mt-4 mb-2 px-2">
                   <textarea type="text" class="form-control" id="message" placeholder="Enter your message for us here. We wil get back to you within 2 business days."></textarea>
