--- a/pages/ex6_index.html
+++ b/pages/ex6_index.html
@@ -37,10 +37,10 @@
             <div class="row">
                 <div class="col-lg-8">
                     <h1>The Bootstrap Blog</h1>
-                    <p>The official example template of creating a blog with Bootstrap</p>
+                    <p class="subtitle">The official example template of creating a blog with Bootstrap</p>
                     
                     <h3>Second Blog!</h3>
-                    <p>Sat Aug 16 2014 by <a href="#">moyl</a></p>
+                    <p class="subtitle">Sat Aug 16 2014 by <a href="#">moyl</a></p>
 
                     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 
                     2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, 
@@ -50,7 +50,7 @@
                     1.10.32.</p>
 
                     <h3>Hello World</h3>
-                    <p>Sat Aug 16 2014 by <a href="#">moyl</a></p>
+                    <p class="subtitle">Sat Aug 16 2014 by <a href="#">moyl</a></p>
 
                     <p>Lorem Ipsum is simply dummy text from the printing and typesetting industry</p>
                 </div>
