--- a/pages/ex7_index.html
+++ b/pages/ex7_index.html
@@ -22,7 +22,7 @@
             <div class="row header">
                 <div class="col-4">
                     <div>
-                        <img class="user-photo" src="/img/Perfil_CV.png">
+                        <img class="user-photo" src="../img/Perfil_CV.png">
                         <h1>Jan Campo-Cossio Reche</h1>
                         <h2>Frontend developer</h2>
                     </div>
